@@ -9,6 +9,7 @@ S3method(fortify,phylo)
 S3method(fortify,phylo4)
 export("%<%")
 export("%<+%")
+export("set.subs<-")
 export("set.treeinfo<-")
 export(.)
 export(NJ)
@@ -20,6 +21,7 @@ export(geom_tippoint)
 export(geom_tree)
 export(get.fields)
 export(get.placements)
+export(get.subs)
 export(get.tree)
 export(get.treeinfo)
 export(get.treetext)
@@ -39,9 +41,11 @@ exportClasses(codeml)
 exportClasses(codeml_mlc)
 exportClasses(jplace)
 exportClasses(paml_rst)
+exportMethods("set.subs<-")
 exportMethods("set.treeinfo<-")
 exportMethods(get.fields)
 exportMethods(get.placements)
+exportMethods(get.subs)
 exportMethods(get.tree)
 exportMethods(get.treeinfo)
 exportMethods(get.treetext)
