@@ -1,0 +1,27 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/AllGenerics.R, R/paml_rst.R
+\docType{methods}
+\name{get.subs}
+\alias{get.subs}
+\alias{get.subs,paml_rst-method}
+\title{get.subs method}
+\usage{
+get.subs(object, type, ...)
+
+\S4method{get.subs}{paml_rst}(object, type, ...)
+}
+\arguments{
+\item{object}{paml_rst object}
+
+\item{type}{one of 'marginal_subs', 'marginal_AA_subs',
+'joint_subs' or 'joint_AA_subs'.}
+
+\item{...}{additional parameter}
+}
+\value{
+data.frame
+}
+\description{
+get.subs method
+}
+
